[project]
name = "gmocoin-exec-alert"
version = "0.1.0"
description = "GMO Coin private websocket order/execution notifications -> PagerDuty alerts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "websockets>=13.0",
]

[project.scripts]
gmocoin-exec-alert = "gmocoin_exec_alert.main:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

